# soanm

./: Cargo.toml  README.md  soanm_enroll.sh
src/: main.rs
test_conf/enroll/: 1_hello.sh  2_try_sudo.sh
test_conf/sponsor/: 1_hello.sh  2_try_sudo.sh
