[package]
name = "soanm"
version = "0.1.0"
edition = "2021"
authors = ["Ben Weinstein-Raun"]

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
magic-wormhole = "0.5"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "process", "rt", "rt-multi-thread"] }

