[package]
name = "soanm"
version = "0.1.0"
edition = "2021"
authors = ["Ben Weinstein-Raun"]
repository = "https://github.com/benwr/soanm"
license = "CC0 OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2"
flate2 = "1"
log = "0.4"
magic-wormhole = "0.5"
stderrlog = "0.5"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "process", "rt", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"

